# ragnar-backend

./: .dockerignore  .env.example  .gitignore  .ignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  cliff.toml  docker-compose.yml  pyproject.toml
api/: dependencies.py  main.py
api/routers/: chat.py  index.py
api/schemas/: __init__.py  chat.py  health.py  index.py  response.py
application/indexing/: service.py
domain/: errors.py
domain/chat/: entities.py
domain/indexing/ports/: __init__.py  bundles.py  protocols.py
infrastructure/: retriever.py
infrastructure/chat/: engine.py
infrastructure/indexing/: adapters.py  chunking.py  constants.py  file_discovery.py  pdf_reader.py  storage.py  zip_utils.py
infrastructure/providers/: __init__.py  contracts.py  huggingface.py  ollama.py  openai.py  selector.py  types.py
shared/: config.py
tests/: conftest.py
tests/e2e/: test_full_chat_flow.py
tests/integration/api/: test_chat_endpoint.py
tests/integration/core/: test_indexer_chroma.py
tests/unit/api/: test_schemas.py
tests/unit/api/routers/: test_chat.py  test_index.py
tests/unit/core/: test_chat.py  test_indexer.py  test_providers.py  test_retriever.py
